[fix] alignments & label sizes

--- a/packages/scss/src/components/inputs/field/_field.scss
+++ b/packages/scss/src/components/inputs/field/_field.scss
@@ -1,6 +1,7 @@
 @mixin field($fieldname) {
 	display: flex;
 	flex-direction: column;
+	align-items: flex-start;
 	position: relative;
 
 	.#{$fieldname}-input {
@@ -31,7 +32,7 @@
 		line-height: 1.3;
 		margin-top: _component("field.message.margin-top");
 
-		> *{
+		> * {
 			margin: 0;
 		}
 	}
