--- a/packages/scss/src/components/inputs/textfield/_textfield.compact.scss
+++ b/packages/scss/src/components/inputs/textfield/_textfield.compact.scss
@@ -14,6 +14,10 @@
 	// MODS
 	// ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
+	&.mod-multiline {
+		align-items: flex-start;
+	}
+
 	/* Label Width */
 
 	@each $input-size-name, $input-width in _getMap("components.textfield.sizes") {
